[tool.poetry]
name = "heron"
version = "0.0.1"
description = "Heron is a library that seamlessly integrates multiple Vision and Language models, as well as Video and Language models."
authors = []
license = "Apatch License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
pyyaml = "^6.0.1"
accelerate = "^0.22.0"
datasets = "^2.14.4"
deepspeed = "^0.10.2"
einops = "^0.6.1"
evaluate = "^0.4.0"
peft = "^0.5.0"
protobuf = "^4.24.2"
scikit-learn = "^1.3.0"
scipy = "^1.11.2"
sentencepiece = "^0.1.99"
torch = ">=2.0.1"
fire = "^0.5.0"
pillow = "^10.0.0"
transformers = "^4.33.0"
isort = "^5.12.0"
black = "^23.7.0"
wandb = "^0.15.9"
opencv-python = "^4.8.0.76"
jupyter = "^1.0.0"
jupyterlab = "^4.0.5"
matplotlib = "^3.7.2"
japanize-matplotlib = "^1.1.3"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
